# Recorder-Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/net/junzz/app/recorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/net/junzz/app/recorder/: RecorderActivity.java
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/java/net/junzz/app/recorder/: RecorderActivity.java
example/src/main/res/layout/: recorder_activity.xml
example/src/main/res/values-zh-rCN/: strings.xml
example/src/test/java/net/junzz/app/recorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mp3lame/: CMakeLists.txt  NOTE  README.md  build.gradle
mp3lame/src/androidTest/java/net/junzz/lib/mp3lame/: ExampleInstrumentedTest.java  LameNativeInstrumentedTest.java
mp3lame/src/main/: AndroidManifest.xml
mp3lame/src/main/cpp/include/: machine.h
mp3lame/src/main/cpp/include/vector/: lame_intrin.h
mp3lame/src/main/cpp/src/: id3tag.c  mp3lame.cpp
mp3lame/src/main/cpp/src/vector/: xmm_quantize_sub.c
mp3lame/src/main/java/net/junzz/lib/mp3lame/: LameNative.java
mp3lame/src/main/res/values/: strings.xml
mp3lame/src/test/java/net/junzz/lib/mp3lame/: ExampleUnitTest.java
recorder/: build.gradle  proguard-rules.pro
recorder/src/androidTest/java/net/junzz/lib/recorder/: ExampleInstrumentedTest.java
recorder/src/main/: AndroidManifest.xml
recorder/src/main/java/net/junzz/lib/recorder/: Recorder.java  RecorderAac.java  RecorderFactory.java  RecorderModel.java  RecorderMp3.java
recorder/src/test/java/net/junzz/lib/recorder/: ExampleUnitTest.java
release/: mp3lame-release.aar  recorder-release.aar
